--- a/content/articles/hello-world.mdx
+++ b/content/articles/hello-world.mdx
@@ -6,4 +6,10 @@ title: Hello World
 
 ## An extremely simple about page
 
-a sample hello world page
+a sample hello world page "made by me"
+
+```js
+
+console.log(`this is js`)
+
+```
