--- a/content/articles/connect-gatsbyjs-to-mysql-database.mdx
+++ b/content/articles/connect-gatsbyjs-to-mysql-database.mdx
@@ -4,9 +4,9 @@ slug: connect-gatsbyjs-to-mysql-database
 
 # How to connect your GatsbyJS site to a MySQL database?
 
-> While migrating your PHP website to a JAMStack site, you can find yourself struggling with migrating the huge MySQL database that you have been maintaining for years. Fortunately, GatsbyJS offers a plugin to easily fetch all the data you need from your MySQL database.
+> While migrating your PHP website to a JAMStack site, you can find yourself struggling with the huge MySQL database that you have been maintaining for years. Fortunately, GatsbyJS offers a plugin to easily fetch all the data you need from your MySQL database.
 
-## `gatsby-source-mysql` 
+## Install `gatsby-source-mysql` 
 
 In your project, add `gatsby-source-mysql` by running:
 
