--- a/content/articles/import-images-gatsby-guide.mdx
+++ b/content/articles/import-images-gatsby-guide.mdx
@@ -207,7 +207,6 @@ Note that the `static` folder is considered the base for your image's path.
 
 ## Further Reading
 
-- 
-
-
-... つづく
+- [Using the Static folder, Gatsbyjs.org](https://www.gatsbyjs.org/docs/static-folder/)
+- [gatsby-image, Gatsbyjs.org](https://www.gatsbyjs.org/packages/gatsby-image/)
+- [Importing Assets Directly Into Files, Gatsbyjs.org](https://www.gatsbyjs.org/docs/importing-assets-into-files/)
