add description and date

--- a/content/articles/connect-gatsbyjs-to-mysql-database.mdx
+++ b/content/articles/connect-gatsbyjs-to-mysql-database.mdx
@@ -1,5 +1,7 @@
 ---
 slug: connect-gatsbyjs-to-mysql-database
+desc: While migrating your PHP website to a JAMStack site, you can find yourself struggling with the huge MySQL database that you have been maintaining for years. Fortunately, GatsbyJS offers a plugin to easily fetch all the data you need from your MySQL database.
+date: "2019-07-02"
 ---
 
 # How to connect your GatsbyJS site to a MySQL database?
