add description and date

--- a/content/articles/gatsby-staticquery-vs-code-snippet.mdx
+++ b/content/articles/gatsby-staticquery-vs-code-snippet.mdx
@@ -1,5 +1,7 @@
 ---
 slug: gatsby-staticquery-vs-code-snippet
+desc: A snippet for VS Code to make writing Gatsby StaticQuery faster and easier.
+date: "2019-07-03"
 ---
 
 # Gatsby StaticQuery Snippet for VS Code
