add description and date

--- a/content/articles/import-images-gatsby-guide.mdx
+++ b/content/articles/import-images-gatsby-guide.mdx
@@ -1,5 +1,7 @@
 ---
 slug: import-images-gatsby-guide
+desc: A guide for importing images in your Gatsby project.
+date: "2019-07-03"
 ---
 
 # All The Ways to Import Images in Gatsby
