--- a/content/articles/import-images-gatsby-guide.mdx
+++ b/content/articles/import-images-gatsby-guide.mdx
@@ -1,7 +1,8 @@
 ---
 slug: import-images-gatsby-guide
 desc: A guide for importing images in your Gatsby project.
-date: "2019-07-03"
+date: '2019-07-03'
+published: true
 ---
 
 # All The Ways to Import Images in Gatsby
@@ -201,7 +202,7 @@ const AndAnotherComponent = () => (
 
 ## Using The Static Folder
 
-Finally, if you don't have for all of this and you don't really worry about optimization 🙄, you can add a `static` folder to the root of your project, add any images you want there, and then easily reference images like so:
+Finally, if you don't have time for all of this and you don't really worry about optimization 🙄, you can add a `static` folder to the root of your project, add any images you want there, and then easily reference images like so:
 
 ```jsx
 const Yup = () => <img src="pathToTheImage.png" />
