--- a/content/articles/import-images-gatsby-guide.mdx
+++ b/content/articles/import-images-gatsby-guide.mdx
@@ -5,9 +5,9 @@ date: '2019-07-03'
 published: true
 ---
 
-# All The Ways to Import Images in Gatsby
+# A Complete Guide to Importing Images in GatsbyJS
 
-> A guide for importing images in your Gatsby project.
+> How to import images in your GatsbyJS project.
 
 ## Using Gatsby Image
 
