format js in articles

--- a/content/articles/redirect-pages-gatsby.mdx
+++ b/content/articles/redirect-pages-gatsby.mdx
@@ -16,9 +16,7 @@ You can redirect a page by importing `Redirect` from `@reach/router` to your pag
 import React from "react"
 import { Redirect } from "@reach/router" // highlight-line
 
-const IndexPage = () => {
-	return <Redirect to={`/en`} /> // highlight-line
-}
+const IndexPage = () => <Redirect to={`/en`} /> // highlight-line
 
 export default IndexPage
 ```
