--- a/content/articles/import-images-gatsby-guide.mdx
+++ b/content/articles/import-images-gatsby-guide.mdx
@@ -1,7 +1,7 @@
 ---
 slug: import-images-gatsby-guide
 desc: A guide for importing images in your Gatsby project.
-date: '2019-07-03'
+date: "2019-07-03"
 published: true
 ---
 
