--- a/www/content/blog/redirect-pages-gatsby.mdx
+++ b/www/content/blog/redirect-pages-gatsby.mdx
@@ -1,1 +1,59 @@
-404: Not Found
+---
+slug: redirect-pages-gatsby
+desc: Two methods to redirect pages in Gatsby
+date: "2019-07-06"
+---
+
+# How to Redirect Pages in Gatsby
+
+> Two methods to redirect pages in Gatsby
+
+## Use Redirect From Reach Router
+
+You can redirect a page by importing `Redirect` from `@reach/router` to your page. Note that you do not have to install anything, as it comes shipped with Gatsby.
+
+```js
+import React from "react"
+import { Redirect } from "@reach/router" // highlight-line
+
+const IndexPage = () => <Redirect to={`/en`} /> // highlight-line
+
+export default IndexPage
+```
+
+## Use Window Location
+
+First, check whether `js÷window` is defined or not and then use `js÷window.location.replace()` to do the redirection.
+
+```js
+import React from "react"
+
+if (typeof window !== `undefined`) window.location.replace(`/en`) // highlight-line
+
+const IndexPage = () => {
+	return <></>
+}
+
+export default IndexPage
+```
+
+## Use createRedirect from Gatsby Actions
+
+I kept this to the end because it didn't work for me when I tried it. But Gatsby offers an action named `createRedirect`, which you can use in `gatsby-node.js`.
+
+```js
+exports.createPages = ({ actions }) => {
+	actions.createRedirect({
+		fromPath: `/`,
+		toPath: `/en`,
+		isPermanent: `true`,
+	})
+}
+```
+
+## Further Reading
+
+- [Creating and Modifying Pages, Gatsbyjs.org](https://www.gatsbyjs.org/docs/creating-and-modifying-pages/)
+- [Node APIs, Gatsbyjs.org](https://www.gatsbyjs.org/docs/node-apis/)
+- [createRedirect, Actions, Gatsbyjs.org](https://www.gatsbyjs.org/docs/actions/#createRedirect)
+- [Window.location, MDN](https://developer.mozilla.org/en-US/docs/Web/API/Window/location)
