--- a/www/content/blog/redirect-pages-gatsby.mdx
+++ b/www/content/blog/redirect-pages-gatsby.mdx
@@ -6,7 +6,9 @@ date: "2019-07-06"
 
 # How to Redirect Pages in Gatsby
 
-> Two methods to redirect pages in Gatsby
+<p className="desc">
+Two methods to redirect pages in Gatsby
+</p>
 
 ## Use Redirect From Reach Router
 
