add description box

--- a/www/content/blog/connect-gatsbyjs-to-mysql-database.mdx
+++ b/www/content/blog/connect-gatsbyjs-to-mysql-database.mdx
@@ -6,7 +6,9 @@ date: "2019-07-02"
 
 # How to connect your GatsbyJS site to a MySQL database?
 
-> While migrating your PHP website to a JAMStack site, you can find yourself struggling with the huge MySQL database that you have been maintaining for years. Fortunately, GatsbyJS offers a plugin to easily fetch all the data you need from your MySQL database.
+<p className="desc">
+While migrating your PHP website to a JAMStack site, you can find yourself struggling with the huge MySQL database that you have been maintaining for years. Fortunately, GatsbyJS offers a plugin to easily fetch all the data you need from your MySQL database.
+</p>
 
 ## Install `gatsby-source-mysql`
 
