--- a/www/content/blog/fix-window-undefined-gatsby.mdx
+++ b/www/content/blog/fix-window-undefined-gatsby.mdx
@@ -6,7 +6,9 @@ date: "2019-07-06"
 
 # How to Fix Window Is Not Defined in Gatsby
 
-> A quick fix for window is not defined in GatsbyJS
+<p className="desc">
+A quick fix for window is not defined in GatsbyJS
+</p>
 
 The error `window is not defined` when running `gatsby build` results from trying to access `window` on the server, where it is not defined. To solve this, you can check for whether it defined or not before using it or importing a module that does.
 
