--- a/www/content/blog/gatsby-staticquery-vs-code-snippet.mdx
+++ b/www/content/blog/gatsby-staticquery-vs-code-snippet.mdx
@@ -6,7 +6,9 @@ date: "2019-07-03"
 
 # Gatsby StaticQuery Snippet for VS Code
 
-> A snippet for VS Code to make writing Gatsby StaticQuery faster and easier.
+<p className="desc">
+A snippet for VS Code to make writing Gatsby StaticQuery faster and easier.
+</p>
 
 Go to `File > Preferences > User Snippets` (Or `Code > Preferences > User Snippets` on MacOS), choose JavaScript, and paste the following snippet inside of the curly braces:
 
