--- a/www/content/blog/import-images-gatsby-guide.mdx
+++ b/www/content/blog/import-images-gatsby-guide.mdx
@@ -7,7 +7,9 @@ published: true
 
 # A Complete Guide to Importing Images in GatsbyJS
 
-> How to import images in your GatsbyJS project.
+<p className="desc">
+How to import images in your GatsbyJS project.
+</p>
 
 ## Using Gatsby Image
 
