--- a/www/content/blog/install-flow-gatsby.mdx
+++ b/www/content/blog/install-flow-gatsby.mdx
@@ -6,7 +6,9 @@ date: "2019-07-06"
 
 # How to Install Flow in Gatsby
 
-> A quick guide for installing Flow in Gatsby
+<p className="desc">
+A quick guide for installing Flow in Gatsby
+</p>
 
 ## 1. Install Gatsby Plugin for Flow
 
