--- a/www/content/blog/how-to-use-redux-in-gatsby-with-react-hooks.mdx
+++ b/www/content/blog/how-to-use-redux-in-gatsby-with-react-hooks.mdx
@@ -6,7 +6,9 @@ date: "2019-07-13"
 
 # How to use Redux in Gatsby with React Hooks
 
-> A guide to installing, configuring, and using Redux in Gatsby with React Hooks
+<p className="desc">
+A guide to installing, configuring, and using Redux in Gatsby with React Hooks
+</p>
 
 As the state of your Gatsby app gets more complex and as you need to persist it during page changes, React's `useState` or `useContext` starts becoming less adequate. This is when Redux comes into play.
 
