--- a/www/content/blog/install-flow-gatsby.mdx
+++ b/www/content/blog/install-flow-gatsby.mdx
@@ -4,13 +4,13 @@ desc: A quick guide for installing Flow in GatsbyJS
 date: "2019-07-06"
 ---
 
-# How to Install Flow in Gatsby
+# How to install Flow in Gatsby
 
 <p className="desc">
 A quick guide for installing Flow in Gatsby
 </p>
 
-## 1. Install Gatsby Plugin for Flow
+## 1. Install Gatsby plugin for Flow
 
 Add `gatsby-plugin-flow` to your project by running the command:
 
@@ -46,6 +46,6 @@ You can initialize Flow by running the command
 npx flow init
 ```
 
-## 4. Check Your Code
+## 4. Check your code
 
 You can now run `npx flow` and it will run Flow and check your code. You can also install Flow's extension for VS Code.
